--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ li {
     list-style: none;
 }
 
+a {
+    color:inherit;
+    text-decoration: none;
+}
+
 
 body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -41,17 +46,65 @@ body {
 
 
 
-
+.container {
+    background-color:inherit;
+    width:100vw;
+    height:100vh;
+}
 
 .project-container {
-    position: absolute;
+    position: relative;
     background-color:var(--white);
-    width:50rem;
+    max-width:65rem;
     height:50rem;
+
     left:50%;
     top:50%;
-    transform:translate(-50%,-50%);
+    transform:translate(-50%, -50%);
     border-radius: 10px;
 }
 
 
+.project__navbar {
+    /* background:rgba(255, 0, 0, 0.404); */
+    display:flex;
+    justify-content: space-between;
+    padding:2rem 1rem;
+}
+
+.project__navbar__items {
+    /* background:rgba(126, 252, 0, 0.74); */
+    display:flex;
+}
+
+.project__navbar__item {
+    margin:0 0.5rem;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project__navbar__item__link {
+    color:gray;
+    margin-right:0.5rem;
+}
+
+/*apply this class ro the current tab
+(.project__navbar__item__link) that the page is on*/
+.current-tab {
+    color:#000;
+    font-weight:600;
+}
+
+/*dot and dot color variation*/
+.dot {
+    background-color:#000;
+    width:5px;
+    height:5px;
+    border-radius: 50%;
+}
+
+.dot-orange {
+    background-color:orange;
+    background-color:var(--orange);
+}
