--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --white:#fff;
     --black:#242531;
     --black-light:#3A3C53;
-    --gray:#646A7C;
+    --gray:#787880;
 
 
 
@@ -183,32 +183,120 @@ body {
 
 
 .project-selection {
-    /* background:red; */
-
+    /* background:red;*/
     display:grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows:1fr;
 }
 
+
+
+/*sidebar*/
 .projects__sidebar {
     background-color:var(--black);
     color:#fff;
     border-radius: 20px;
     padding:1.5rem;
-}
-
-.projects__sidebar__heading {
     
 }
 
+
+.projects__sidebar__heading {
+    color:#787880;
+    font-size: 1rem;
+    margin-bottom:1rem;
+}
+
 .sidebar__project {
-    display:flex;
-    /* justify-content: center; */
+    display: grid;
+    grid-template-columns: 0.6rem 1fr;
     align-items: center;
+    margin:1rem 0;
+    /* background:rgba(15, 115, 245, 0.185); */
+}
+
+
+.sidebar__project .view-all-btn {
+    grid-column-start:2;
+    grid-column-end:2;
+    justify-self:start;
+}
+
+.view-all-btn {
+    position: relative;
+    border:none;
+    background:none;
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    
+}
+
+.view-all-link,
+.view-all-link-icon {
+    color:blue;
+    color:var(--blue-dark);
+}
+
+.view-all-link-icon {
+    margin-left:0.65rem;
+    font-size:1rem;
+    position: relative;
+    top:-1px;
 }
 
 
 
+
+
+
+/*projects*/
 .projects {
-    background-color:#fff;
+    background:#fff;
+    padding:1.5rem;
+}
+
+.projects__main__items {
+    background:rgba(0, 255, 0, 0.288);
+
+    display:grid;
+    grid-template-columns: repeat(4,auto);
+    justify-content: center;
+    align-items: center;
+}
+
+.projects__main__item {
+    background:rgba(255, 0, 0, 0.274);
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+
+    align-items: center;
+    text-align:center;
+    
+    /* display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align:center;
+    flex:1;
+    margin:0 1rem; */
+    /* margin:0 1rem; */
+
+
+    
+}
+
+/* .projects__main__item:first-of-type {
+    margin-left:0;
+} */
+
+.projects__main__item__btn {
+    border:none;
+    color:#fff;
+    background-color:var(--blue);
+    font-size:3rem;
+    width:6rem;
+    height: 6rem;
+    border-radius: 15px;
 }
